<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_read"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#9C27B0"
        android:gravity="center"
        android:text="@string/text_tip_read"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_top"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#2196F3"
        android:gravity="center"
        android:text="@string/text_tip_top"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_read"
        app:layout_constraintRight_toLeftOf="@+id/tv_del"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_del"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E91E32"
        android:gravity="center"
        android:text="@string/text_tip_delete"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
